--- a/resources/assets/sass/_colors.scss
+++ b/resources/assets/sass/_colors.scss
@@ -4,7 +4,7 @@
 // $black: hsl(0, 0%, 4%);
 $light: hsl(0, 0%, 96%);
 $dark: hsl(0, 0%, 21%);
-$primary: hsl(171, 100%, 41%);
+$primary: #feab21;
 $link: hsl(217, 71%, 53%);
 $info: hsl(204, 86%, 53%);
 $success: hsl(141, 71%, 48%);
