--- a/resources/assets/sass/_nav.scss
+++ b/resources/assets/sass/_nav.scss
@@ -5,7 +5,9 @@
     img.logo-text {
         margin-left: 20px;
         transition: margin-left 0.5s;
-        &:hover {
+    }
+    &:hover {
+        img.logo-text {
             margin-left: 10px;
         }
     }
